frontend/test/should_fail/pattern_004.grg
pattern Foo()
{
	:Node;
	
	modify(-a:Edge->) {
	}
}

rule r {
	. -a:Edge-> .; 
	foo:Foo();
	modify {
		foo(a);
	}
}